--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,6 +1,7 @@
 <script src="https://utteranc.es/client.js"
         repo="https://github.com/Kuro96/kuro96.github.io"
         issue-term="title"
+        label="💬"
         theme="preferred-color-scheme"
         crossorigin="anonymous"
         async>
