--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -13,6 +13,10 @@
     {{- if .Param "icpBeian" }}
         </br><span><a href="https://beian.miit.gov.cn" target="_blank">{{ .Param "icpBeian" | markdownify }}</a></span>
     {{- end }}
+    {{- if .Param "moeBeian" }}
+        {{- if not (.Param "icpBeian") }} </br> {{- else }} | {{- end }}
+        <span><a href='https://icp.gov.moe/?keyword={{ .Param "moeBeian" }}' target="_blank">萌ICP备{{ .Param "moeBeian" }}号</a></span>
+    {{- end }}
 
 </footer>
 {{- end }}
